# Web-Monitoring-CPU

./: .gitignore  README.md  VACANCY.md  pyproject.toml  task.md
source/: app.py  cash.py  main.db  test.db
source/database/: __init__.py  database.py  usage.py
source/models/: __init__.py  usage.py  utilization.py
source/routes/: usage.py
source/server/: blueprint.py
source/service/: monitoring_service.py
source/services/: __init__.py  monitoring.py  router.py
