[tool.poetry]
name = "web-monitoring-cpu"
version = "0.1.0"
description = "Web service for monitoring CPU core load"
authors = ["sugaryDev <posta22@inbox.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.2"
psutil = "^5.9.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
